--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -1,5 +1,5 @@
-
-<nav role="navigation" class="nav w-100  ">
+<header class="header">
+<nav role="navigation" class="nav w-100">
     <a class="menu-toggle" href="#head-nav">
       <span aria-hidden="true" class="icon-menu"></span><span class="menu-toggle-text"> menu</span>
     </a>
@@ -35,7 +35,7 @@
       </li>
     </ul>
   </nav>
-
+</header>
   <!-- <header class="header">
     <nav class="navbar">
         <h2 class="logo"><a href="#"><img src="../../assets/images/logo-ci-la-bokk.png" alt="" height="50px" width="120px" routerLink="/accueil"></a></h2>
