--- a/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
+++ b/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
@@ -1,17 +1,16 @@
 <app-header></app-header>
-
 <!-- section de resto avec ces cartes -->
 <div class="w-100 mx-auto me-5 my-4">
     <div class="d-flex justify-content-between my-4 gap-4">
-        <h4 class="titreDash fw-bold">Tous les restaurants à proximité</h4>
+        <h4 class="titreDash fw-bold">Le nom du Restaurant</h4>
         <div>
             <div class="d-flex justify-content-around gap-3 me-5">
                 <div>
                     <select class="form-select selectc-input " aria-label="Default select example">
-                        <option selected>Different restaurant</option>
-                        <option value="1">Fast-Food</option>
-                        <option value="2">Ndekki</option>
-                        <option value="3">Dibiterie</option>
+                        <option selected>Menu</option>
+                        <option value="1">Menu 1</option>
+                        <option value="2">Menu 2</option>
+                        <option value="3">Menu 3</option>
                       </select>
                 </div>
                 <div class="search">
@@ -31,27 +30,10 @@
             </div>
             <div class="card-body cardBodyResto">
               <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
+                <h5>libelle</h5>
+                <p class="">prix </p>
             </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
-            </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
+              <p class="card-text">descriptif</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
                 <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
@@ -65,10 +47,10 @@
             </div>
             <div class="card-body cardBodyResto">
               <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
+                <h5>libelle</h5>
+                <p class="">prix </p>
             </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
+              <p class="card-text">descriptif</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
                 <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
@@ -82,10 +64,27 @@
             </div>
             <div class="card-body cardBodyResto">
               <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
+                <h5>libelle</h5>
+                <p class="">prix </p>
             </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
+              <p class="card-text">descriptif</p>
+            </div>
+            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
+                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card rounded rounded-4 cardResto">
+            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
+            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
+            </div>
+            <div class="card-body cardBodyResto">
+              <div class="card-title d-flex justify-content-between">
+                <h5>libelle</h5>
+                <p class="">prix </p>
+            </div>
+              <p class="card-text">descriptif</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
                 <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
