--- a/src/app/Utilisateur/restaurant/restaurant.component.html
+++ b/src/app/Utilisateur/restaurant/restaurant.component.html
@@ -14,98 +14,45 @@
 </div>
 <!-- section de resto avec ces cartes -->
 <div class="w-100 mx-auto me-5 my-4">
-    <div class="d-flex justify-content-between my-4 gap-4">
-        <h4 class="titreDash fw-bold">Tous les restaurants à proximité</h4>
+  <div class="d-flex justify-content-between my-4 gap-4">
+    <h4 class="titreDash fw-bold">Tous les restaurants à proximité</h4>
+    <div>
+      <div class="d-flex justify-content-around gap-3 me-5">
         <div>
-            <div class="d-flex justify-content-around gap-3 me-5">
-                <div>
-                    <select class="form-select selectc-input " aria-label="Default select example">
-                        <option selected>Different restaurant</option>
-                        <option value="1">Fast-Food</option>
-                        <option value="2">Ndekki</option>
-                        <option value="3">Dibiterie</option>
-                      </select>
-                </div>
-                <div class="search">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control inputsearchResto" placeholder="rechercher un restaurant">
-                        <span class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></span>
-                    </div>
-                </div>
-            </div>
+          <select class="form-select selectc-input" aria-label="Default select example" id="categorie_type" name="categorie_type" [(ngModel)]="categorie_id" (change)="onRestoChange()" required>
+            <option *ngFor="let categorie of categories" [value]="categorie.id">{{ categorie.type }}</option>
+          </select>
         </div>
-    </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 m-5 ">
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
-            </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
-            </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
-            </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>Delicious Pizza</h5>
-                <p class="badge  badgeEtatResto">Ouvert</p>
-            </div>
-              <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
-            </div>
+        <div class="search">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control inputsearchResto" placeholder="rechercher un restaurant">
+            <span class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></span>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 m-5">
+    <div *ngFor="let restaurant of restaurants" class="col">
+      <div class="card rounded rounded-4 cardResto">
+        <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
+          <img src="http://127.0.0.1:8000/images/{{restaurant.image}}" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
+        </div>
+        <div class="card-body cardBodyResto">
+          <div class="card-title d-flex justify-content-between">
+            <h5>{{ restaurant.name }}</h5>
+            <p class="badge badgeEtatResto">ouvert</p>
+          </div>
+          <p class="card-text">{{ restaurant.description }}</p>
+        </div>
+        <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
+          <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- section de resto avec ces cartes -->
 <!-- pagination  -->
 <div class="pagin d-flex justify-content-center">
