--- a/src/app/Utilisateur/accueil/accueil.component.html
+++ b/src/app/Utilisateur/accueil/accueil.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 <!-- section type de restaurant -->
-<div class="border-black my-5" id="restotype">
+<div class="border-black my-5 typedeResto" id="restotype">
   <div class="d-flex justify-content-between">
     <h3 class="m-4">Différentes types de restaurants</h3>
     <div class="d-flex justify-content-between m-4">
