--- a/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
+++ b/src/app/Utilisateur/details-restaurant/details-restaurant.component.html
@@ -1,17 +1,17 @@
 <app-header></app-header>
 <!-- section de resto avec ces cartes -->
-<div class="w-100 mx-auto me-5 my-4">
+
+
+<section class="my-5 border mt-5">
+<div class="w-100 mx-auto  my-4">
     <div class="d-flex justify-content-between my-4 gap-4">
-        <h4 class="titreDash fw-bold">Le nom du Restaurant</h4>
+        <h4 class="titreDash fw-bold">Le nom du Restaurant </h4>
         <div>
             <div class="d-flex justify-content-around gap-3 me-5">
                 <div>
-                    <select class="form-select selectc-input " aria-label="Default select example">
-                        <option selected>Menu</option>
-                        <option value="1">Menu 1</option>
-                        <option value="2">Menu 2</option>
-                        <option value="3">Menu 3</option>
-                      </select>
+                  <select class="form-select selectc-input" aria-label="Default select example" (change)="onMenuChange()" [(ngModel)]="selectedMenuId">
+                    <option *ngFor="let menu of menus" [value]="menu.id">{{ menu.titre }}</option>
+                  </select>
                 </div>
                 <div class="search">
                     <div class="input-group mb-3">
@@ -22,77 +22,30 @@
             </div>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 m-5 ">
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>libelle</h5>
-                <p class="">prix </p>
-            </div>
-              <p class="card-text">descriptif</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
-            </div>
-          </div>
+
+<div>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 m-5">
+    <div *ngFor="let plat of plats" class="col">
+      <div class="card rounded rounded-4 cardResto">
+        <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
+          <img src="http://127.0.0.1:8000/images/{{plat.image}}" class="card-img-top border border-2 w-75 h-75 my-5" alt="plat image">
         </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>libelle</h5>
-                <p class="">prix </p>
-            </div>
-              <p class="card-text">descriptif</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
-            </div>
+        <div class="card-body cardBodyResto">
+          <div class="card-title d-flex justify-content-between">
+            <h5>{{ plat.libelle }}</h5>
+            <p class="">{{ plat.prix }}</p>
           </div>
+          <p class="card-text">{{ plat.descriptif }}</p>
         </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>libelle</h5>
-                <p class="">prix </p>
-            </div>
-              <p class="card-text">descriptif</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card rounded rounded-4 cardResto">
-            <div class="rounded rounded-4 w-100  cardRestoEntete d-flex justify-content-center">
-            <img src="https://images.pexels.com/photos/3763814/pexels-photo-3763814.jpeg?auto=compress&cs=tinysrgb&w=600" class="card-img-top border border-2 w-75 h-75 my-5" alt="image restaurant">
-            </div>
-            <div class="card-body cardBodyResto">
-              <div class="card-title d-flex justify-content-between">
-                <h5>libelle</h5>
-                <p class="">prix </p>
-            </div>
-              <p class="card-text">descriptif</p>
-            </div>
-            <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
-            </div>
-          </div>
+        <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
+          <button class="boutonCommandeDts rounded rounded-5 px-3">Ajouter  <i class="bi bi-basket"></i></button>
         </div>
       </div>
     </div>
+  </div>
+</div>
+</div>
+
 <!-- section de resto avec ces cartes -->
 <!-- pagination  -->
 <div class="pagin d-flex justify-content-center">
@@ -114,6 +67,10 @@
         </ul>
     </nav>
 </div>
+
+</section>
+
+
 <!-- <div class="pagin d-flex justify-content-center">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
