--- a/src/app/Utilisateur/panier/panier.component.html
+++ b/src/app/Utilisateur/panier/panier.component.html
@@ -3,45 +3,38 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">#</th>
-            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Nom</th>
-            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Date</th>
-            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Action</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Image</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Nom du plat</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Prix Unitaire  </th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Quantite</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Prix Total</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Supprimer</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
-            <td>Fast-food</td>
-            <td>10/10/2024</td>
-            <td>
-              <ul class="d-flex list-group list-group-horizontal ">
-                <li class="list-group-item"  data-bs-target="#editcategorieModal" data-bs-toggle="modal"><i class="bi bi-pencil-square"></i></li>
-                <li class="list-group-item"><i class="bi bi-trash3"></i></li>
-              </ul>
-            </td>
+            <th scope="row">image</th>
+            <td>libelle</td>
+            <td>1500</td>
+            <td> <button><i class="bi bi-dash"></i></button>  2  <button><i class="bi bi-plus"></i></button></td>
+            <td>3000</td>
+            <td><i class="bi bi-x"></i></td>
           </tr>
           <tr>
-            <th scope="row">2</th>
-            <td>Patisserie </td>
-            <td>15/12/2023</td>
-            <td>
-              <ul class="d-flex list-group list-group-horizontal ">
-                <li class="list-group-item" data-bs-target="#editcategorieModal" data-bs-toggle="modal"><i class="bi bi-pencil-square"></i></li>
-                <li class="list-group-item"><i class="bi bi-trash3"></i></li>
-              </ul>
-            </td>
+            <th scope="row">image</th>
+            <td>libelle</td>
+            <td>1500</td>
+            <td> <button><i class="bi bi-dash"></i></button>  2  <button><i class="bi bi-plus"></i></button></td>
+            <td>3000</td>
+            <td><i class="bi bi-x"></i></td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td>Tangana</td>
-            <td>10/10/2021</td>
-            <td>
-              <ul class="d-flex list-group list-group-horizontal  border-0">
-                <li class="list-group-item" data-bs-target="#editcategorieModal" data-bs-toggle="modal"><i class="bi bi-pencil-square"></i></li>
-                <li class="list-group-item"><i class="bi bi-trash3"></i></li>
-              </ul>
-            </td>
+            <th scope="row">image</th>
+            <td>libelle</td>
+            <td>1500</td>
+            <td> <button><i class="bi bi-dash"></i></button>  2  <button><i class="bi bi-plus"></i></button></td>
+            <td>3000</td>
+            <td><i class="bi bi-x"></i></td>
           </tr>
         </tbody>
       </table>
