--- a/src/app/Utilisateur/accueil/accueil.component.css
+++ b/src/app/Utilisateur/accueil/accueil.component.css
@@ -77,7 +77,7 @@
     flex-direction: column; 
     justify-content: space-between; 
     text-align: center; 
-    background-color: white;
+    background-color: #F8F3C6;
     box-sizing: border-box;
     flex: 0 0 auto;
 }
@@ -90,11 +90,16 @@
 }
 
 .cerclemini span {
-    /* padding: 14px; */
+    /* padding-top: 14px; */
     text-align: center;
     align-self: center;
 }
+.typedeResto{
+    background-color: #F8F3C6 !important;
+    color: #5D3C22;
+    font-weight: bold;
 
+}
 
 /* @keyframes slideCircles {
     0% {
