--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -8,7 +8,7 @@
         <a href=""><img src="/assets/logoE.png" alt="Logo d'easyleek" ></a>
       </li>
       <li>
-        <ul>
+        <ul class="active">
           <li class="menu-item text-black">
             <a routerLink="/accueil" routerLinkActive="active">Accueil</a>
           </li>
